client/src/components/styles/card.css
.card {
	margin: 20px;
	padding: 20px;
	width: 18rem;
	max-height: 18rem;
	background-color: var(--primary-color);
	border-radius: 10px;
	transition: max-height 0.2s;
	overflow: hidden;
}

.card.expanded {
	max-height: 30rem;
}

@keyframes card-blur {
	0% { filter: blur(0px); }
	100% { filter: blur(8px); }
}
.card.blur {
	animation: card-blur 1s forwards ease-out;
}

.card-title {
	font-weight: bold;
	font-size: 24px;
}

.selected {
	background-color: var(--bg-color);
}

.card-image {
	margin: auto;
	display: flex;
	min-height: 10rem;
	max-width: 14rem;
	object-fit: contain;
	border-radius: 10px;
}

.card-button {
	margin: 10px 10px 0 0;
	width: 35px;
	height: 35px;
	background-color: #eceff1;
	border-radius: 50%;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
}


.product-description {
	margin-top: 20px;
	overflow-x: hidden;
	overflow-y: hidden;
}

.card-button-long {
	margin: 12px 10px 0 0;
	width: 80px;
	height: 30px;
	background-color: #eceff1;
	color: black;
	font-weight: bold;
	font-size: 12px;
	border-radius: 25px;
	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
}

.product-price {
	font-weight: bolder;
	font-size: 20px;
	float: right;
	margin: 1rem;
}

.hidden {
	display: none;
}

.icon {
	color: black;
}

@media screen and (max-width: 1000px) {
	.card {
		margin: 10px auto;
		padding: 10px;
		width: 10rem;
		max-height: 14rem;
	}

	.card-button {
		width: 30px;
		height: 30px;
	}

	.card-title {
		font-size: 14px;
	}

	.card-image {
		max-width: 8rem;
		min-height: 8rem;
	}

	.product-price {
		margin: 20px 10px 0 0;
		font-size: 12px;
		display: contents;
	}

	.product-description {
		font-size: 12px;
	}

	.card-button-long {
		width: 70px;
	}
}

